# PCL_Test

./: README.md  objectrecognition.cpp  scenerecognition.cpp
UAV/: a.out  prac.cpp
cloud_view/: cloud_viewer.cpp
gain_pcd/: CMakeLists.txt  generatePointCloud.cpp
indoor_segmentation/: CMakeLists.txt  Indoor_segmentation.cpp  pcd_generate.cpp  pcd_generate_new.cpp  pcd_generate_straight.cpp
kinect_view/: CMakeLists.txt
pcd_viewer/: CMakeLists.txt
pcd_write/: CMakeLists.txt
recognition/: CMakeLists.txt  correspondence_grouping.cpp
region_growing/: region_growing_segmentation.cpp
segmentation/: CMakeLists.txt  cluster_extraction.cpp
segmentation2/: RANSAC.cpp  practice.cpp
